// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProductImage Must render the ProductCard with the image of the product 1`] = `
<div
  className="productCard undefined"
>
  <img
    alt="coffe-mug"
    className="productImg undefined"
    src="./coffee-mug.png"
  />
</div>
`;

exports[`ProductImage Must render with the personalized image 1`] = `
<img
  alt="coffe-mug"
  className="productImg undefined"
  src="./coffee-mug.png"
/>
`;
